fix: not visible nav burger, footer telephone, footer email styling

--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ Layout
   width: 100%;
   height: 100%;
   background: var(--clr-dp200);
-  z-index: 1000;
+  z-index: 999;
 }
 
 .nav__item {
@@ -237,6 +237,7 @@ Layout
   height: 80px;
   cursor: pointer;
   transition: all 0.5s ease-in-out;
+  z-index: 1000;
 }
 .burger__bar {
   width: 50px;
@@ -498,6 +499,22 @@ Layout
 
 .phone__number {
   white-space: nowrap;
+}
+
+.footer-contacts__email {
+  margin-bottom: 1em;
+}
+
+.mailto {
+  color: var(--clr-bw900);
+  font-size: var(--fs20);
+  font-family: var(--ff100);
+
+  font-weight: 900;
+}
+
+.mailto:hover {
+  color: var(--clr-bw100);
 }
 
 /* =================
